<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/PrimaryBackgroundCloro"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        tools:context=".ui.MainActivity">

        <ImageView
            android:id="@+id/SignUpFragment_ImageView_ArrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/SignUp_tv_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/SignUp_tv"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SignUp_tv_Create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/SignUp_tv_text"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/ThirdTextColor"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/SignUp_tv_Name"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/SignUp_tv_Name"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SignUp_Et_Name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            app:boxBackgroundColor="#fafafa"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignUpFragment_InputET_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SignUp_et_NameHint"
                android:inputType="text"
                android:paddingStart="@dimen/_15sdp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/SignUp_tv_password"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_17sdp"
            android:text="@string/Email"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SignUp_Et_Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            app:boxBackgroundColor="#fafafa"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignUpFragment_InputET_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Your_Email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_15sdp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/SignUp_tv_Password"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_17sdp"
            android:text="@string/SignUp_tv_Password"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SignUp_et_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            app:boxBackgroundColor="#fafafa"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignUpFragment_InputET_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/SignUpFragment_Button_Register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/SignUp_bt_Register"
                android:textAllCaps="false"
                android:textSize="@dimen/_13ssp"
                app:backgroundTint="@color/primaryColor"
                app:cornerRadius="@dimen/_8sdp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/SignUpFragment_AnimationView"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/progressbar" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_11sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/SignUp_Lo_tv_Have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignUp_tv_HaveAccount"
                android:textColor="@color/ThirdTextColor"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/SignUpFragment_TextView_SignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/SignUp_tv_SignIn"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/SignUp_tv_By"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="@string/SignUp_tv_text2"
        android:textColor="@color/ThirdTextColor" />

    <TextView
        android:id="@+id/SignUp_tv_TimeDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="@string/SignUp_tv_text3"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textStyle="bold" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
