<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp">

    <TextView
        android:id="@+id/CartFragment_TextView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:textStyle="bold"
        android:letterSpacing=".04"
        android:text="@string/MyCart"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/CartFragment_Include_Location"
        layout="@layout/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CartFragment_TextView_Title" />

    <TextView
        android:id="@+id/CartFragment_Unused1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/YourOrder"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CartFragment_Include_Location" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CartFragment_RecyclerView_Orders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/CartFragment_Button_PleaseOrder"
        app:layout_constraintTop_toBottomOf="@+id/CartFragment_Unused1"
        tools:layout_editor_absoluteX="19dp" />

    <TextView
        android:id="@+id/CartFragment_Unused2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TotalPrice"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="@+id/CartFragment_TextView_TotalPrice"
        app:layout_constraintEnd_toStartOf="@+id/CartFragment_TextView_TotalPrice"
        app:layout_constraintTop_toTopOf="@+id/CartFragment_TextView_TotalPrice" />

    <TextView
        android:id="@+id/CartFragment_TextView_TotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="@+id/CartFragment_Unused1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CartFragment_Unused1"
        tools:text=" 236.15 EGP" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/CartFragment_Button_PleaseOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/order"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>